# amazon-treasures-chat

./: README.md  persona.md  pyproject.toml  run_build.py  run_chat.py
.github/workflows/: assistant-build.yml  repeat-integration-tests.yml
data/about/: about_amazon_treasure_chat.txt
data/files/: persona.txt
integration/: run_chat_test.py
src/assistants/: amazon_treasure_chat_assistant_service.py  amazon_treasure_chat_assistant_service_test.py  assistant_service.py  assistant_service_test.py
src/chats/: chat.py  chat_test.py
src/clients/: openai_api.py  openai_api_test.py
src/exporters/: exporter.py
src/exporters/about/: about_exporter.py  about_exporter_test.py  amazon_treasure_chat_exporter.py  amazon_treasure_chat_exporter_test.py  persona_exporter.py  persona_exporter_test.py
src/exporters/amazon/: amazon_products_exporter.py  amazon_products_exporter_test.py
src/exporters/files/: files_exporter.py  files_exporter_test.py
src/prompts/: amazon_assistant_functions.json  amazon_assistant_prompt.md  amazon_treasure_chat_functions.json  amazon_treasure_chat_prompt.md  prompt.md  prompt.py  prompt_test.py
